# uwunya

./: .gitignore  Cargo.toml  LICENSE
src/: admin.rs  config.rs  main.rs
templates/: admin.html  index.html
