[package]
name = "uwunya"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-auth = "0.8"
axum-macros = { version = "0.5" }
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
tokio = { version = "1.43", features = ["rt-multi-thread", "full"] }
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1.0", features = ["derive", "rc"] }
toml = "0.8"
o2o = "0.5"
anyhow = "1.0"
notify = "8.0"
subtle = "2.6"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[profile.release]
lto = true